--- a/package.json
+++ b/package.json
@@ -1,32 +1,12 @@
 {
-  "name": "manxho",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.7.0",
-    "@splidejs/react-splide": "^0.7.8",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "framer-motion": "^6.3.11",
-    "gapi-script": "^1.2.0",
-    "moment-timezone": "^0.5.34",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-google-button": "^0.7.2",
-    "react-google-login": "^5.2.2",
-    "react-lazy-hero": "^2.0.0",
-    "react-moment": "^1.1.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^8.2.0",
-    "styled-components": "^5.3.6",
-    "swiper": "^8.2.2",
-    "web-vitals": "^2.1.4"
+    "axios": "^0.19.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,10 +15,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
